account activation email

--- a/src/templates/emails/account-activation.html
+++ b/src/templates/emails/account-activation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Password Reset</title>
+    <title>Account Activation</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -64,14 +64,15 @@
     <div class="background">
         <div class="container">
             <div class="header">
-                <h1>Password Reset Request</h1>
+                <h1>Activate your account</h1>
             </div>
             <div class="content">
-                <p><b> Forgot your password? No problem! </b></p>
-                <p> You can set a new one now! Click the link below. </p>
-                <a href="{{resetLink}}" class="btn">Reset Password</a>
-                <p>This link will expire after <b>one hour</b>.</p>
-                <p>If you didn't request a password reset you can delete this email.</p>
+                <p><b> Thank you for signing up </b></p>
+                <p> All you need to do is verify your email address to activate your account.</p>
+                <p>Click on the link below to verify your email:</p>
+                <a href="{{resetLink}}" class="btn">Confirm My Email</a>
+                <p>This link will expire in <b>24 hours</b>. </p>
+                <p>You're receiving this email because you recently created a new account. If this wasn't you, please ignore this email.</p>
             </div>
         </div>
     </div>
